# rivcam

./: .gitignore  README.md  setup.cfg  test_stitching.py
docs/: rivcam-guide.md
rivcam/: __init__.py  __main__.py  build_dispatch.py  builders.py  common.py  compositor.py  ffmpeg_runner.py  manifest.py  stitch.py
rivcam/parsers/: __init__.py  cameras.py  filenames.py
rivcam/utils/: logging.py  paths.py  time.py
scripts/: bootstrap_python311.sh  common_utils.py  default_template.json  find_and_cat.py  requirements.txt  route_processor.py  super_compositor.py  video_group_processor.py  video_stitch_processor.py
scripts/devtools/: grouping_probe.py  stitch_probe.py
tests/: test_camera_normalization.py  test_dev_overlap.py  test_encoder_fallback.py  test_overlay_filter.py
