[metadata]
name = rivcam
version = 0.1.0
description = Rivian dashcam tooling packaged as an installable CLI.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Kyle Darling
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires =
    gpxpy
    tqdm
    ffmpeg-python
    ffmpeg-progress-yield

[options.packages.find]
where = .
include = rivcam*

[options.entry_points]
console_scripts =
    rivcam = rivcam.__main__:main

[options.extras_require]
tests =
    pytest
    coverage

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -ra

[flake8]
max-line-length = 100
extend-ignore = E203,E266,E501,W503
exclude = .git,__pycache__,.venv,build,dist

[isort]
profile = black